Remove old message css; fix spacing for messages; fix height of convo list

--- a/assets/css/convo.css
+++ b/assets/css/convo.css
@@ -92,7 +92,7 @@ ul.messages {
 li.message {
     background: white;
     padding: 1em;
-    margin-bottom: 1em;
+    margin-bottom: 2px;
 }
 
 li.message>div.message-header {
